# coco_skill_ontology_stack_builder

./: .gitignore  DEMO_SCRIPT.md  README.md  SKILL.md  pyproject.toml  sync-upstream.sh
_SANDBOX_ONTOLOGY_POC_TICKET_METRICS_TICKET_METRICS_ONTOLOGY_AGENT/: metadata.yaml  optimization_log.md
output/TICKET_METRICS_ONT_POC/: build_metadata.py  classes.json  combined_metadata.json  converge_metadata.json  demo_app.py  deployed_objects.json  eda_ml_metadata.json  enrich_ontology.py  mappings.json  progress.json  questions.txt  relations.json  stats.json
questions/: benchmark_v13 - benchmark_v13.csv  sv_customer_trended_ticket_metrics.sql
references/: abstract_views_template.sql  agent_config_template.json  metadata_tables_template.sql  physical_layer_template.sql  semantic_model_template.yaml
scripts/: generate_agent_config.py  generate_ontology_sql.py  generate_semantic_models.py  generate_spcs_scaffolding.py  introspect_schema.py  visualize_ontology.py
specs/features/ontology-stack-builder/: design.md  requirements.md  tasks.md
